<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="91dp"
        android:layout_height="68dp"
        android:contentDescription="@string/txt_codigo_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="230dp"
        android:layout_height="46dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_codigoc_string"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.222" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_tituloc3_string"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/txt_tituloc1_string"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="360dp"
        android:layout_height="199dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
        app:layout_constraintVertical_bias="0.285">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_descc1_string" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_descc2_string" />

        <EditText
            android:id="@+id/editTextTextPersonName11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_descc3_string" />

        <EditText
            android:id="@+id/editTextTextPersonName12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="132dp"
        android:layout_height="53dp"
        android:text="@string/btn_estado_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.582" />

    <Button
        android:id="@+id/button6"
        android:layout_width="132dp"
        android:layout_height="53dp"
        android:text="@string/btn_histo_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.582" />

</androidx.constraintlayout.widget.ConstraintLayout>