<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="209dp"
        android:layout_height="31dp"
        android:singleLine="true"
        android:text="@string/txt_titulo1_string"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="359dp"
        android:layout_height="257dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_desc1_string" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:inputType="textMultiLine|textPersonName"
                android:singleLine="false"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_desc2_strin" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_desc3_strin" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_desc8_strin" />

            <EditText
                android:id="@+id/editTextTextPersonName15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_desc4_strin" />

            <EditText
                android:id="@+id/editTextTextPersonName6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_desc5_strin" />

            <EditText
                android:id="@+id/editTextTextPersonName7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_desc6_strin" />

            <EditText
                android:id="@+id/editTextTextPersonName8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_desc7_strin" />

            <EditText
                android:id="@+id/editTextTextPersonName9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_desc8_string" />

            <EditText
                android:id="@+id/editTextTextPersonName13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="69dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@mipmap/fondoetasdasdasd" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="230dp"
        android:layout_height="46dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_codigo_string"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Buscar"
        android:text="Buscar"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="347dp"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.839">

        <RadioButton
            android:id="@+id/rbutton1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txt_rb_string" />

        <RadioButton
            android:id="@+id/rbutton2"
            android:layout_width="66dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/txt_rb2_string" />

        <RadioButton
            android:id="@+id/rbutton3"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/txt_rb3_string" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>