<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="415dp"
        android:layout_height="132dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="CArticulos"
            android:text="@string/btn_articulos_string"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="30sp"
            android:textStyle="normal|italic" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="CClientes"
            android:text="@string/btn_clientes_string"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="30sp"
            android:textStyle="normal|italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="323dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="269dp"
            android:layout_height="257dp"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/fzgestionn_foreground" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_consultas_string"
            android:textSize="36sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>